--- a/assets/css/css.css
+++ b/assets/css/css.css
@@ -18,23 +18,27 @@
 body{
     font-family: "aliey regular_italic" ,"Times New Roman" , cursive;
     background: linear-gradient(to right ,#000022 , #000044 , #000022);
+    /* background-color: #000; */
 }
 h1{
   /* text-decoration: line-through; */
   /* text-transform: capitalize; */
 
-  font-family:"aliey bold", Helvetica , serif;
+  /* font-family:"aliey bold", Helvetica , serif;*/
   color: white;
-  font-style: italic;
+  /* font-style: italic; */
   text-align: center ;
 }
+h1:hover{
+  text-shadow:  5px 3px 5px #000;
+}
 .content{
-  border: red 2px solid;
+  /* border: red 2px solid; */
   width: 300px;
   height: 300px;
-  text-overflow: ellipsis;
-  text-indent: 40px;
-  color:#eeeeff;
+  /* text-overflow: ellipsis; */
+  /* text-indent: 40px; */
+  /* color:#eeeeff; */
   font-size: 14px;
   margin-left: auto;
   margin-right: auto;
