--- a/assets/css/flow.css
+++ b/assets/css/flow.css
@@ -1,5 +1,5 @@
 body{
-  overflow-y:hidden;
+  /* overflow-y:hidden; */
   margin:0px;
   padding:0px;
 }
@@ -31,7 +31,7 @@ body{
 }
  */
  /* Nav styles */
-nav{
+/* nav{
   margin-top: -32px;
   width: 20%;
   background-color: #000055;
@@ -58,4 +58,53 @@ nav ul li a:hover{
   color: #000055;
   text-shadow: 2px 2px 2px white;
 
+} */
+/* nav{
+  background:#000055;
+  height:50px;
+  padding: 30px;
+}
+nav ul{
+  list-style-type: none;
+  text-align: center;
+}
+nav ul li{
+  display: inline-block;
+  margin-left: 30px;
+}
+nav ul li a{
+  text-decoration: none;
+  color:white;
+} */
+header{
+  width: 100%;
+  height: 100px;
+  background-color: #000055;
+  margin-bottom: 10px;
+}
+nav{
+  position: sticky;
+  z-index: 10000000000000;
+  top:0px;
+  width: 100%;
+  background:#000055;
+  height:50px;
+}
+nav ul{
+  padding-top: 10px;
+  margin-left: 460px;
+  margin-right: auto;
+  list-style-type: none;
+  text-align: center;
+}
+nav ul li{
+  float: left;
+  margin-left: 30px;
+}
+nav ul li a{
+  text-decoration: none;
+  color:white;
+}
+p{
+  z-index: 300;
 }
