Glorious Transit & Animations

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -57,7 +57,7 @@ aside{
   background-color: #492500;
 }
 aside h3{
-  text-align: center;
+  text-align: center
 }
 main section h1{
   text-align: center;
