--- a/assets/css/animations.css
+++ b/assets/css/animations.css
@@ -4,11 +4,13 @@ button,input{
 }
 div{
   background-color: fuchsia;
-  width: 100px;
+  width: 160px;
   height: 100px;
+  padding:70px 10px 10px 10px;
+  text-align: center;
   /* margin-left: auto;
   margin-right: auto; */
-  border-radius: 50px;
+  border-radius: 100%;
   position: relative;
   /* animation-name:test;
   animation-duration: 1s;
@@ -17,15 +19,21 @@ div{
   /*animation-timing-function:ease-in-out;
   animation-iteration-count: 10;
   animation-fill-mode: forwards; */
-  animation:test 1s alternate forwards ease 5 ;
+  animation:test 3s ease  forwards 1 ;
 }
 @keyframes test{
   0%{
     top:0;
+    color: transparent;
     background: black;
   }
-  100%{
+  50%{
     top: 500px;
+    color : blue;
+  }
+  100%{
+    margin-left: 500px;
+    color : blue;
   }
   /* 10%{
     left: 200px;
